grammar.txt
statements  : NEWLINE* statement (NEWLINE+ statement)* NEWLINE*

statement		: KEYWORD:return expr?
						: KEYWORD:continue
						: KEYWORD:break
						: expr

expr        : KEYWORD:decl  IDENTIFIER EQ expr
            : comp-expr ((KEYWORD:AND|KEYWORD:OR) comp-expr)*

comp-expr   : NOT comp-expr
            : arith-expr ((EE|LT|GT|LTE|GTE) arith-expr)*

arith-expr  :	term ((PLUS|MINUS) term)*

term        : factor ((MUL|DIV) factor)*

factor      : (PLUS|MINUS) factor
            : power

power       : call (POW factor)*

call        : atom (LPAREN (expr (COMMA expr)*)? RPAREN)?

atom        : INT|FLOAT|STRING|IDENTIFIER
            : LPAREN expr RPAREN
            : list-expr
            : if-expr
            : for-expr
            : while-expr
            : func-def

list-expr   : LSQUARE (expr (COMMA expr)*)? RSQUARE

if-expr     : KEYWORD:if expr KEYWORD:then
              (statement if-expr-b|if-expr-c?)
            | (NEWLINE statements KEYWORD:terminate|if-expr-b|if-expr-c)

if-expr-b   : KEYWORD:elseIf expr KEYWORD:then
              (statement if-expr-b|if-expr-c?)
            | (NEWLINE statements KEYWORD:terminate|if-expr-b|if-expr-c)

if-expr-c   : KEYWORD:else
              statement
            | (NEWLINE statements KEYWORD:terminate)

for-expr    : KEYWORD:for IDENTIFIER EQ expr KEYWORD:to expr 
              (KEYWORD:step expr)? KEYWORD:then
              statement
            | (NEWLINE statements KEYWORD:terminate)

while-expr  : KEYWORD:while expr KEYWORD:then
              statement
            | (NEWLINE statements KEYWORD:terminate)

func-def    : KEYWORD:procedure IDENTIFIER?
              LPAREN (IDENTIFIER (COMMA IDENTIFIER)*)? RPAREN
              (ARROW expr)
            | (NEWLINE statements KEYWORD:terminate)
